force-app/main/default/objects/Pitch_Project_Outlet__c/Pitch_Project_Outlet__c.object-meta.xml
<CustomObject>
    <description>Junction between a Pitch Project and a participating Outlet. Each record represents one unit code associated with the outlet for that pitch. The Unit_Code__c value is matched against incoming Actual_Revenue__c rows to auto-link actuals to the project.</description>
    <label>Pitch Project Outlet</label>
    <nameField>
        <displayFormat>PPO-{0000}</displayFormat>
        <label>Pitch Project Outlet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pitch Project Outlets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>