force-app/main/default/objects/Pitch_Project_Outlet__c/fields/Outlet__c.field-meta.xml
<CustomField>
    <fullName>Outlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet</label>
    <referenceTo>Outlet__c</referenceTo>
    <relationshipLabel>Pitch Project Outlets</relationshipLabel>
    <relationshipName>Pitch_Project_Outlets</relationshipName>
    <type>Lookup</type>
</CustomField>