force-app/main/default/objects/Pitch_Project_Outlet__c/fields/Pitch_Project__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Project__c</fullName>
    <label>Pitch Project</label>
    <referenceTo>Pitch_Project__c</referenceTo>
    <relationshipLabel>Pitch Project Outlets</relationshipLabel>
    <relationshipName>Pitch_Project_Outlets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>