force-app/main/default/objects/Pitch_Project_Outlet__c/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <label>Unit Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>